Refactored type checking so it is based on when type substitution is going to take place. This is because that is indirectly recursive and so needs to be triggered if recursion down generic types is triggered. Also corrected defects in a couple of test so that simulated return argument/type is applied to methods. This is what the compiler does, so we need to do it in the tests.